--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "datejs": "^1.0.0-rc3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mongodb": "^4.6.0"
   },
   "devDependencies": {
