--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "datejs": "^1.0.0-rc3",
     "dotenv": "^16.0.1",
