--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "moment": "^2.29.3",
     "mongodb": "^4.6.0"
   },
   "devDependencies": {
